# zkEVM-framework

./: .gitignore  .gitmodules  .markdownlint.yml  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  flake.nix  run_tests.sh  zkevm-framework.nix
.github/workflows/: check-formatting.yml  run-tests-linux.yml
libs/: CMakeLists.txt
libs/assigner_runner/: CMakeLists.txt
libs/assigner_runner/include/zkevm_framework/assigner_runner/: block_parser.hpp  ext_vm_host.hpp  runner.hpp  state_parser.hpp  utils.hpp  write_assignments.hpp
libs/assigner_runner/resources/: block_schema.json  state_schema.json
libs/assigner_runner/src/: block_parser.cpp  runner.cpp  state_parser.cpp  utils.cpp
libs/block_extractor/: CMakeLists.txt  block_extractor.cpp
libs/block_extractor/include/zkevm_framework/block_extractor/: block_extractor.hpp
libs/block_generator/: CMakeLists.txt  block_generator.cpp  block_generator.hpp
libs/block_generator/include/zkevm_framework/block_generator/: block_generator.hpp  json_validator.hpp
libs/block_generator/resources/: block_schema.json  schema.def
libs/data_types/: CMakeLists.txt
libs/data_types/include/zkevm_framework/data_types/: account.hpp  account_block.hpp  base.hpp  block.hpp  block_header.hpp  errors.hpp  message.hpp  mpt.hpp  state.hpp  transaction.hpp  transaction_receipt.hpp
libs/data_types/src/: CMakeLists.txt  account.cpp  account_block.cpp  base.cpp  block.cpp  block_header.cpp  errors.cpp  message.cpp  state.cpp  transaction.cpp  transaction_receipt.cpp  utils.hpp
libs/data_types/src/containers/: account.hpp  account_block.hpp  block.hpp  block_header.hpp  message.hpp  state.hpp  transaction.hpp  transaction_receipt.hpp
libs/json_helpers/: CMakeLists.txt  json_helpers.cpp
libs/json_helpers/cmake/: SchemaHelper.cmake
libs/json_helpers/include/zkevm_framework/json_helpers/: json_helpers.hpp
libs/nil_core/: CMakeLists.txt
libs/nil_core/include/zkevm_framework/core/mpt/: mpt.hpp
libs/nil_core/include/zkevm_framework/core/types/: address.hpp  block.hpp  bloom.hpp  code.hpp  collator.hpp  log.hpp  message.hpp  node.hpp  shard.hpp  signature.hpp  storage.hpp
libs/nil_core/src/mpt/: mpt.cpp
libs/output_artifacts/: CMakeLists.txt
libs/output_artifacts/include/: output_artifacts.hpp
libs/output_artifacts/src/: output_artifacts.cpp
libs/preset/include/zkevm_framework/preset/: bytecode.hpp  preset.hpp
libs/rpc/: CMakeLists.txt  data_extractor.cpp
libs/rpc/include/zkevm_framework/rpc/: data_extractor.hpp
nix/: evmc.nix  hashtree.nix  intx.nix  sszpp.nix  valijson.nix
nix/patches/: hashtree-execstack-fix.diff  sszpp-merkleize-fix.diff
scripts/: clear_gcc_flags.sh
tests/: CMakeLists.txt
tests/libs/: CMakeLists.txt
tests/libs/assigner_runner/: CMakeLists.txt  runner_test.cpp
tests/libs/block_generator/: CMakeLists.txt  block_generator_tests.cpp
tests/libs/block_generator/inputs/: block.json  scheme.json
tests/libs/data_types/: CMakeLists.txt  test_account.cpp  test_account_block.cpp  test_base.cpp  test_block.cpp  test_block_header.cpp  test_message.cpp  test_state.cpp  test_transaction.cpp  test_transaction_receipt.cpp
tests/libs/nil_core/: CMakeLists.txt  test_nil_core_ssz.cpp
tests/ssz/: CMakeLists.txt  fixed_size_serialization.cpp  variable_size_serialization.cpp
zkevm-framework/: .clang-format  CMakeLists.txt  zkevm-framework.nix
zkevm-framework/.github/scripts/: pure_cmake_build.sh
zkevm-framework/.github/workflows/: run-tests-linux.yml
zkevm-framework/libs/: CMakeLists.txt
zkevm-framework/libs/assigner_runner/include/zkevm_framework/assigner_runner/: block_parser.hpp  state_parser.hpp
zkevm-framework/libs/assigner_runner/resources/: block_schema.json  state_schema.json
zkevm-framework/libs/assigner_runner/src/: block_parser.cpp  runner.cpp  utils.cpp
zkevm-framework/libs/json_helpers/: CMakeLists.txt  json_helpers.cpp  schema.def.in
zkevm-framework/libs/json_helpers/cmake/: SchemaScript.cmake
zkevm-framework/libs/nil_core/include/zkevm_framework/core/: common.hpp
zkevm-framework/libs/nil_core/include/zkevm_framework/core/mpt/: mpt.hpp  node.hpp  path.hpp
zkevm-framework/libs/nil_core/include/zkevm_framework/core/types/: account.hpp  block.hpp  currency.hpp  gas.hpp  messages.hpp  receipt.hpp  value.hpp
zkevm-framework/libs/nil_core/src/: CMakeLists.txt
zkevm-framework/libs/nil_core/src/mpt/: node.cpp  path.cpp
zkevm-framework/libs/output_artifacts/: CMakeLists.txt
zkevm-framework/libs/output_artifacts/include/: output_artifacts.hpp
zkevm-framework/libs/output_artifacts/src/: output_artifacts.cpp
zkevm-framework/libs/preset/: CMakeLists.txt
zkevm-framework/libs/preset/include/zkevm_framework/preset/: bytecode.hpp
zkevm-framework/libs/rpc/: CMakeLists.txt  data_extractor.cpp
zkevm-framework/libs/rpc/include/: httplib.h
zkevm-framework/libs/rpc/include/zkevm_framework/rpc/: data_extractor.hpp
zkevm-framework/scripts/: run_clang_format.sh
zkevm-framework/tests/libs/: CMakeLists.txt
zkevm-framework/tests/libs/assigner_runner/: CMakeLists.txt
zkevm-framework/tests/libs/nil_core/: CMakeLists.txt  test_nil_core_mpt.cpp  test_nil_core_ssz.cpp
zkevm-framework/tests/libs/output_artifacts/: CMakeLists.txt  test_range.cpp  test_ranges.cpp
